[package]
name = "file_search"
version = "0.1.0"
authors = ["Ilia Konnov <iliakonnov@gmail.com>"]
edition = "2018"
# TODO
description = "Fast search"
license = "MIT/Apache-2.0"
repository = "none"
readme = "none"
keywords = ["none"]
categories = ["none"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellfn = "0.1"
rusqlite = "0.19"
clap = "2.33"
chrono = "0.4"
byteorder = "1.3"
num-traits = "0.2"
walkdir = "2"
unicode-segmentation = "1.3.0"

[features]
make_dump = []
